[gd_scene load_steps=25 format=2]

[ext_resource path="res://tiles/grass and cliffs/LPC_cliffs_grass.png" type="Texture" id=1]
[ext_resource path="res://tiles/grass and cliffs/tile182.png" type="Texture" id=2]
[ext_resource path="res://unit_selection/SelectebleUnitsGrid.tscn" type="PackedScene" id=3]
[ext_resource path="res://WaveMenur.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hills.tscn" type="PackedScene" id=5]
[ext_resource path="res://spawn_area/SpawnArea.tscn" type="PackedScene" id=6]
[ext_resource path="res://buildable_area/BuildableArea.tscn" type="PackedScene" id=7]
[ext_resource path="res://BottomArea.tscn" type="PackedScene" id=8]
[ext_resource path="res://GameManager.gd" type="Script" id=9]
[ext_resource path="res://WaveInfo.gd" type="Script" id=10]
[ext_resource path="res://WaveInfo.tscn" type="PackedScene" id=11]
[ext_resource path="res://SpawnableUnitNode.gd" type="Script" id=12]
[ext_resource path="res://SpawnableUnit.tscn" type="PackedScene" id=13]
[ext_resource path="res://BuildableUnit.gd" type="Script" id=14]

[sub_resource type="GDScript" id=12]
script/source = "extends Node2D


func _ready():
	pass
	
	
"

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 11.713, 28.1944, 30.8102, 13.1481, 30.8102, 27.037 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 1.125, 14.8842, 0.546265, 14.8842, 31.2176, 14.3055, 32, 32, 0, 31.6667 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 14.8842, 2.11108, 16.6204, 15.4213, 31.088, 2.11108, 30.5092 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 14.8426, 0, 16.5787, 2.56018, 17.1574, 28.6018, 1.53241, 28.6018, 0.375, 0.245361 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 14.2639, 0, 13.1064, 0.652771, 0, 8.75461, 0.953674, 0 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 27.7454, 8.75461, 0, 9.91202, 0.546265, 1.81018, 28.324, 0 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 29.6528, 1.81018, 30.2314, 8.75461, 19.8148, 7.01852, 20.3935, 1.23148, 19.2361, 0.0740662 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 30.8102, 0, 29.6528, 29.1805, 16.9213, 30.338, 19.8148, 1.98148, 18.0787, 0.245361 )

[sub_resource type="TileSet" id=21]
0/name = "LPC_cliffs_grass.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 384, 288 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 5, 0 ), 432, Vector2( 5, 1 ), 438, Vector2( 5, 2 ), 54, Vector2( 6, 0 ), 504, Vector2( 6, 1 ), 511, Vector2( 6, 2 ), 63, Vector2( 7, 0 ), 216, Vector2( 7, 1 ), 219, Vector2( 7, 2 ), 27 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 13 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="World" type="Node2D"]

[node name="Terrain" type="Node2D" parent="."]
script = SubResource( 12 )

[node name="Backgroumd" type="Sprite" parent="Terrain"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 640, 360 )

[node name="Hills" parent="Terrain" instance=ExtResource( 5 )]
visible = false
margin_bottom = 96.0

[node name="BottomArea" parent="Terrain" instance=ExtResource( 8 )]
margin_top = 576.0
margin_right = 1280.0
margin_bottom = 704.0

[node name="TileMap" type="TileMap" parent="Terrain"]
scale = Vector2( 2, 2 )
tile_set = SubResource( 21 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
format = 1
tile_data = PoolIntArray( 0, 0, 5, 1, 0, 6, 2, 0, 6, 3, 0, 6, 4, 0, 6, 5, 0, 6, 6, 0, 6, 7, 0, 6, 8, 0, 6, 9, 0, 6, 10, 0, 6, 11, 0, 6, 12, 0, 6, 13, 0, 6, 14, 0, 6, 15, 0, 6, 16, 0, 6, 17, 0, 6, 18, 0, 6, 19, 0, 7, 65536, 0, 65541, 65537, 0, 65542, 65538, 0, 65542, 65539, 0, 65542, 65540, 0, 65542, 65541, 0, 65542, 65542, 0, 65542, 65543, 0, 65542, 65544, 0, 65542, 65545, 0, 65542, 65546, 0, 65542, 65547, 0, 65542, 65548, 0, 65542, 65549, 0, 65542, 65550, 0, 65542, 65551, 0, 65542, 65552, 0, 65542, 65553, 0, 65542, 65554, 0, 65542, 65555, 0, 65543, 131072, 0, 131077, 131073, 0, 131078, 131074, 0, 131078, 131075, 0, 131078, 131076, 0, 131078, 131077, 0, 131078, 131078, 0, 131078, 131079, 0, 131078, 131080, 0, 131078, 131081, 0, 131078, 131082, 0, 131078, 131083, 0, 131078, 131084, 0, 131078, 131085, 0, 131078, 131086, 0, 131078, 131087, 0, 131078, 131088, 0, 131078, 131089, 0, 131078, 131090, 0, 131078, 131091, 0, 131079, 589824, 0, 5, 589825, 0, 6, 589826, 0, 6, 589827, 0, 6, 589828, 0, 6, 589829, 0, 6, 589830, 0, 6, 589831, 0, 6, 589832, 0, 6, 589833, 0, 6, 589834, 0, 6, 589835, 0, 6, 589836, 0, 6, 589837, 0, 6, 589838, 0, 6, 589839, 0, 6, 589840, 0, 6, 589841, 0, 6, 589842, 0, 6, 589843, 0, 7, 655360, 0, 131077, 655361, 0, 131078, 655362, 0, 131078, 655363, 0, 131078, 655364, 0, 131078, 655365, 0, 131078, 655366, 0, 131078, 655367, 0, 131078, 655368, 0, 131078, 655369, 0, 131078, 655370, 0, 131078, 655371, 0, 131078, 655372, 0, 131078, 655373, 0, 131078, 655374, 0, 131078, 655375, 0, 131078, 655376, 0, 131078, 655377, 0, 131078, 655378, 0, 131078, 655379, 0, 131079 )

[node name="SpawnArea" parent="Terrain" instance=ExtResource( 6 )]
margin_left = 960.0
margin_top = 192.0
margin_right = 1280.0
margin_bottom = 576.0

[node name="BuildableArea" parent="Terrain" instance=ExtResource( 7 )]
margin_top = 192.0
margin_right = 960.0
margin_bottom = 576.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2( 0.5, 0.5 )
transform = Transform2D( 0.5, 0, 0, 0.5, 0, 0 )

[node name="SelectableUnitsView" parent="CanvasLayer" instance=ExtResource( 3 )]
margin_left = 1360.0
margin_top = 1280.0
margin_right = 1900.0
margin_bottom = 1344.0
rect_scale = Vector2( 2, 2 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="WaveManager" parent="." instance=ExtResource( 4 )]
margin_left = 16.0
margin_top = 640.0
margin_right = 640.0
margin_bottom = 704.0
script = ExtResource( 9 )

[node name="WaveInfo" parent="." instance=ExtResource( 11 )]
script = ExtResource( 10 )

[node name="BuildableUnits" type="YSort" parent="."]

[node name="Node2D" type="Node2D" parent="BuildableUnits"]
position = Vector2( 32, 224 )
script = ExtResource( 14 )

[node name="Node2D2" type="Node2D" parent="BuildableUnits"]
position = Vector2( 96, 224 )
script = ExtResource( 14 )

[node name="Node2D3" type="Node2D" parent="BuildableUnits"]
position = Vector2( 160, 224 )
script = ExtResource( 14 )

[node name="Node2D4" type="Node2D" parent="BuildableUnits"]
position = Vector2( 224, 224 )
script = ExtResource( 14 )

[node name="Node2D5" type="Node2D" parent="BuildableUnits"]
position = Vector2( 288, 224 )
script = ExtResource( 14 )

[node name="Node2D6" type="Node2D" parent="BuildableUnits"]
position = Vector2( 344, 224 )
script = ExtResource( 14 )

[node name="Node2D7" type="Node2D" parent="BuildableUnits"]
position = Vector2( 416, 224 )
script = ExtResource( 14 )

[node name="Node2D8" type="Node2D" parent="BuildableUnits"]
position = Vector2( 480, 224 )
script = ExtResource( 14 )

[node name="Node2D9" type="Node2D" parent="BuildableUnits"]
position = Vector2( 544, 224 )
script = ExtResource( 14 )

[node name="Node2D10" type="Node2D" parent="BuildableUnits"]
position = Vector2( 608, 224 )
script = ExtResource( 14 )

[node name="Node2D11" type="Node2D" parent="BuildableUnits"]
position = Vector2( 672, 224 )
script = ExtResource( 14 )

[node name="Node2D12" type="Node2D" parent="BuildableUnits"]
position = Vector2( 736, 224 )
script = ExtResource( 14 )

[node name="Node2D13" type="Node2D" parent="BuildableUnits"]
position = Vector2( 800, 224 )
script = ExtResource( 14 )

[node name="Node2D14" type="Node2D" parent="BuildableUnits"]
position = Vector2( 864, 224 )
script = ExtResource( 14 )

[node name="Node2D15" type="Node2D" parent="BuildableUnits"]
position = Vector2( 928, 224 )
script = ExtResource( 14 )

[node name="Node2D16" type="Node2D" parent="BuildableUnits"]
position = Vector2( 32, 288 )
script = ExtResource( 14 )

[node name="Node2D17" type="Node2D" parent="BuildableUnits"]
position = Vector2( 96, 288 )
script = ExtResource( 14 )

[node name="Node2D18" type="Node2D" parent="BuildableUnits"]
position = Vector2( 160, 288 )
script = ExtResource( 14 )

[node name="Node2D19" type="Node2D" parent="BuildableUnits"]
position = Vector2( 224, 288 )
script = ExtResource( 14 )

[node name="Node2D20" type="Node2D" parent="BuildableUnits"]
position = Vector2( 288, 288 )
script = ExtResource( 14 )

[node name="Node2D21" type="Node2D" parent="BuildableUnits"]
position = Vector2( 352, 288 )
script = ExtResource( 14 )

[node name="Node2D22" type="Node2D" parent="BuildableUnits"]
position = Vector2( 416, 288 )
script = ExtResource( 14 )

[node name="Node2D23" type="Node2D" parent="BuildableUnits"]
position = Vector2( 480, 288 )
script = ExtResource( 14 )

[node name="Node2D24" type="Node2D" parent="BuildableUnits"]
position = Vector2( 544, 288 )
script = ExtResource( 14 )

[node name="Node2D25" type="Node2D" parent="BuildableUnits"]
position = Vector2( 608, 288 )
script = ExtResource( 14 )

[node name="Node2D26" type="Node2D" parent="BuildableUnits"]
position = Vector2( 672, 288 )
script = ExtResource( 14 )

[node name="Node2D27" type="Node2D" parent="BuildableUnits"]
position = Vector2( 736, 288 )
script = ExtResource( 14 )

[node name="Node2D28" type="Node2D" parent="BuildableUnits"]
position = Vector2( 800, 288 )
script = ExtResource( 14 )

[node name="Node2D29" type="Node2D" parent="BuildableUnits"]
position = Vector2( 864, 288 )
script = ExtResource( 14 )

[node name="Node2D30" type="Node2D" parent="BuildableUnits"]
position = Vector2( 928, 288 )
script = ExtResource( 14 )

[node name="Node2D31" type="Node2D" parent="BuildableUnits"]
position = Vector2( 32, 352 )
script = ExtResource( 14 )

[node name="Node2D32" type="Node2D" parent="BuildableUnits"]
position = Vector2( 96, 352 )
script = ExtResource( 14 )

[node name="Node2D33" type="Node2D" parent="BuildableUnits"]
position = Vector2( 160, 352 )
script = ExtResource( 14 )

[node name="Node2D34" type="Node2D" parent="BuildableUnits"]
position = Vector2( 224, 352 )
script = ExtResource( 14 )

[node name="Node2D35" type="Node2D" parent="BuildableUnits"]
position = Vector2( 288, 352 )
script = ExtResource( 14 )

[node name="Node2D36" type="Node2D" parent="BuildableUnits"]
position = Vector2( 352, 352 )
script = ExtResource( 14 )

[node name="Node2D37" type="Node2D" parent="BuildableUnits"]
position = Vector2( 416, 352 )
script = ExtResource( 14 )

[node name="Node2D38" type="Node2D" parent="BuildableUnits"]
position = Vector2( 480, 352 )
script = ExtResource( 14 )

[node name="Node2D39" type="Node2D" parent="BuildableUnits"]
position = Vector2( 544, 352 )
script = ExtResource( 14 )

[node name="Node2D40" type="Node2D" parent="BuildableUnits"]
position = Vector2( 616, 352 )
script = ExtResource( 14 )

[node name="Node2D41" type="Node2D" parent="BuildableUnits"]
position = Vector2( 672, 352 )
script = ExtResource( 14 )

[node name="Node2D42" type="Node2D" parent="BuildableUnits"]
position = Vector2( 736, 352 )
script = ExtResource( 14 )

[node name="Node2D43" type="Node2D" parent="BuildableUnits"]
position = Vector2( 800, 352 )
script = ExtResource( 14 )

[node name="Node2D44" type="Node2D" parent="BuildableUnits"]
position = Vector2( 856, 352 )
script = ExtResource( 14 )

[node name="Node2D45" type="Node2D" parent="BuildableUnits"]
position = Vector2( 928, 352 )
script = ExtResource( 14 )

[node name="Node2D46" type="Node2D" parent="BuildableUnits"]
position = Vector2( 32, 416 )
script = ExtResource( 14 )

[node name="Node2D47" type="Node2D" parent="BuildableUnits"]
position = Vector2( 96, 416 )
script = ExtResource( 14 )

[node name="Node2D48" type="Node2D" parent="BuildableUnits"]
position = Vector2( 160, 416 )
script = ExtResource( 14 )

[node name="Node2D49" type="Node2D" parent="BuildableUnits"]
position = Vector2( 216, 416 )
script = ExtResource( 14 )

[node name="Node2D50" type="Node2D" parent="BuildableUnits"]
position = Vector2( 288, 416 )
script = ExtResource( 14 )

[node name="Node2D51" type="Node2D" parent="BuildableUnits"]
position = Vector2( 352, 416 )
script = ExtResource( 14 )

[node name="Node2D52" type="Node2D" parent="BuildableUnits"]
position = Vector2( 416, 416 )
script = ExtResource( 14 )

[node name="Node2D53" type="Node2D" parent="BuildableUnits"]
position = Vector2( 480, 416 )
script = ExtResource( 14 )

[node name="Node2D54" type="Node2D" parent="BuildableUnits"]
position = Vector2( 552, 416 )
script = ExtResource( 14 )

[node name="Node2D55" type="Node2D" parent="BuildableUnits"]
position = Vector2( 616, 416 )
script = ExtResource( 14 )

[node name="Node2D56" type="Node2D" parent="BuildableUnits"]
position = Vector2( 672, 416 )
script = ExtResource( 14 )

[node name="Node2D57" type="Node2D" parent="BuildableUnits"]
position = Vector2( 736, 416 )
script = ExtResource( 14 )

[node name="Node2D58" type="Node2D" parent="BuildableUnits"]
position = Vector2( 800, 416 )
script = ExtResource( 14 )

[node name="Node2D59" type="Node2D" parent="BuildableUnits"]
position = Vector2( 856, 416 )
script = ExtResource( 14 )

[node name="Node2D60" type="Node2D" parent="BuildableUnits"]
position = Vector2( 928, 416 )
script = ExtResource( 14 )

[node name="Node2D61" type="Node2D" parent="BuildableUnits"]
position = Vector2( 32, 480 )
script = ExtResource( 14 )

[node name="Node2D62" type="Node2D" parent="BuildableUnits"]
position = Vector2( 96, 480 )
script = ExtResource( 14 )

[node name="Node2D63" type="Node2D" parent="BuildableUnits"]
position = Vector2( 160, 480 )
script = ExtResource( 14 )

[node name="Node2D64" type="Node2D" parent="BuildableUnits"]
position = Vector2( 216, 480 )
script = ExtResource( 14 )

[node name="Node2D65" type="Node2D" parent="BuildableUnits"]
position = Vector2( 288, 480 )
script = ExtResource( 14 )

[node name="Node2D66" type="Node2D" parent="BuildableUnits"]
position = Vector2( 344, 480 )
script = ExtResource( 14 )

[node name="Node2D67" type="Node2D" parent="BuildableUnits"]
position = Vector2( 416, 480 )
script = ExtResource( 14 )

[node name="Node2D68" type="Node2D" parent="BuildableUnits"]
position = Vector2( 472, 480 )
script = ExtResource( 14 )

[node name="Node2D69" type="Node2D" parent="BuildableUnits"]
position = Vector2( 544, 480 )
script = ExtResource( 14 )

[node name="Node2D70" type="Node2D" parent="BuildableUnits"]
position = Vector2( 608, 480 )
script = ExtResource( 14 )

[node name="Node2D71" type="Node2D" parent="BuildableUnits"]
position = Vector2( 672, 480 )
script = ExtResource( 14 )

[node name="Node2D72" type="Node2D" parent="BuildableUnits"]
position = Vector2( 736, 480 )
script = ExtResource( 14 )

[node name="Node2D73" type="Node2D" parent="BuildableUnits"]
position = Vector2( 800, 480 )
script = ExtResource( 14 )

[node name="Node2D74" type="Node2D" parent="BuildableUnits"]
position = Vector2( 864, 480 )
script = ExtResource( 14 )

[node name="Node2D75" type="Node2D" parent="BuildableUnits"]
position = Vector2( 928, 480 )
script = ExtResource( 14 )

[node name="Node2D76" type="Node2D" parent="BuildableUnits"]
position = Vector2( 32, 544 )
script = ExtResource( 14 )

[node name="Node2D77" type="Node2D" parent="BuildableUnits"]
position = Vector2( 96, 544 )
script = ExtResource( 14 )

[node name="Node2D78" type="Node2D" parent="BuildableUnits"]
position = Vector2( 160, 544 )
script = ExtResource( 14 )

[node name="Node2D79" type="Node2D" parent="BuildableUnits"]
position = Vector2( 224, 544 )
script = ExtResource( 14 )

[node name="Node2D80" type="Node2D" parent="BuildableUnits"]
position = Vector2( 288, 544 )
script = ExtResource( 14 )

[node name="Node2D81" type="Node2D" parent="BuildableUnits"]
position = Vector2( 352, 544 )
script = ExtResource( 14 )

[node name="Node2D82" type="Node2D" parent="BuildableUnits"]
position = Vector2( 416, 544 )
script = ExtResource( 14 )

[node name="Node2D83" type="Node2D" parent="BuildableUnits"]
position = Vector2( 480, 544 )
script = ExtResource( 14 )

[node name="Node2D84" type="Node2D" parent="BuildableUnits"]
position = Vector2( 544, 544 )
script = ExtResource( 14 )

[node name="Node2D85" type="Node2D" parent="BuildableUnits"]
position = Vector2( 608, 544 )
script = ExtResource( 14 )

[node name="Node2D86" type="Node2D" parent="BuildableUnits"]
position = Vector2( 672, 544 )
script = ExtResource( 14 )

[node name="Node2D87" type="Node2D" parent="BuildableUnits"]
position = Vector2( 736, 544 )
script = ExtResource( 14 )

[node name="Node2D88" type="Node2D" parent="BuildableUnits"]
position = Vector2( 800, 544 )
script = ExtResource( 14 )

[node name="Node2D89" type="Node2D" parent="BuildableUnits"]
position = Vector2( 864, 544 )
script = ExtResource( 14 )

[node name="Node2D90" type="Node2D" parent="BuildableUnits"]
position = Vector2( 928, 544 )
script = ExtResource( 14 )

[node name="SpawnableUnits" type="YSort" parent="."]

[node name="SpawnableUnit" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 992, 224 )
script = ExtResource( 12 )

[node name="SpawnableUnit2" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1056, 224 )
script = ExtResource( 12 )

[node name="SpawnableUnit3" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1120, 224 )
script = ExtResource( 12 )

[node name="SpawnableUnit4" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1184, 224 )
script = ExtResource( 12 )

[node name="SpawnableUnit5" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1248, 224 )
script = ExtResource( 12 )

[node name="SpawnableUnit6" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 992, 288 )
script = ExtResource( 12 )

[node name="SpawnableUnit7" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1056, 288 )
script = ExtResource( 12 )

[node name="SpawnableUnit8" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1120, 288 )
script = ExtResource( 12 )

[node name="SpawnableUnit9" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1184, 288 )
script = ExtResource( 12 )

[node name="SpawnableUnit10" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1248, 288 )
script = ExtResource( 12 )

[node name="SpawnableUnit11" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 992, 352 )
script = ExtResource( 12 )

[node name="SpawnableUnit12" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1056, 352 )
script = ExtResource( 12 )

[node name="SpawnableUnit13" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1120, 352 )
script = ExtResource( 12 )

[node name="SpawnableUnit14" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1184, 352 )
script = ExtResource( 12 )

[node name="SpawnableUnit15" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1248, 352 )
script = ExtResource( 12 )

[node name="SpawnableUnit16" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 992, 416 )
script = ExtResource( 12 )

[node name="SpawnableUnit17" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1056, 416 )
script = ExtResource( 12 )

[node name="SpawnableUnit18" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1120, 416 )
script = ExtResource( 12 )

[node name="SpawnableUnit19" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1184, 416 )
script = ExtResource( 12 )

[node name="SpawnableUnit20" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1248, 416 )
script = ExtResource( 12 )

[node name="SpawnableUnit21" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 992, 480 )
script = ExtResource( 12 )

[node name="SpawnableUnit22" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1056, 480 )
script = ExtResource( 12 )

[node name="SpawnableUnit23" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1120, 480 )
script = ExtResource( 12 )

[node name="SpawnableUnit24" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1184, 480 )
script = ExtResource( 12 )

[node name="SpawnableUnit25" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1248, 480 )
script = ExtResource( 12 )

[node name="SpawnableUnit26" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 992, 544 )
script = ExtResource( 12 )

[node name="SpawnableUnit27" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1056, 544 )
script = ExtResource( 12 )

[node name="SpawnableUnit28" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1120, 544 )
script = ExtResource( 12 )

[node name="SpawnableUnit29" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1184, 544 )
script = ExtResource( 12 )

[node name="SpawnableUnit30" parent="SpawnableUnits" instance=ExtResource( 13 )]
position = Vector2( 1248, 544 )
script = ExtResource( 12 )
